29 August 2007
+ Added setting to control recent blog entries block
+ Started XML-RPC controls to Blog
+ Added new variables: updater_id, updater, update_date
  Need to alter database install/update
+ Blogs sorted by publish date not create date.
+ Publish date defaults to create date now, not other way around.
+ Updated: templates/settings.tpl

26 August 2007
+ Removed redundant commands

22 August 2007
+ changed entry-title to contain h2 instead of h1
+ Updated: templates/view.tpl

Version 1.5.2
----------------------------------------------------------------
9 August 2007
+ Fixed previous blog listing. Thank blindman


Version 1.5.1
-----------------------------------------------------------------
3 May 2007
+ Fixed bug 1707618 - Comments link now goes to comments anchor
+ Requires comments version 0.6.1

Version 1.5.0
------------------------------------------------------------------
24 April 2007
+ Increased blog entry title size to 100.

19 April 2007
+ Added setting to control whether to allow anonymous comments by
  default on new blog entries
+ Added Captcha option to submissions.
+ Fixed cache reset
+ Added define to determine the highest amount of blog pages to cache
+ Updated files: templates/settings.tpl, templates/edit.tpl,
                 conf/config.php 


11 April 2007
+ Added extra checks for anonymous submission
+ Changed coding of image manager call.

4 April 2007
+ Changed to new language functionality.

26 March 2007
+ Fixed: logErrors called on blog object instead of image object
  on empty image id.

19 March 2007
+ Fixed pagination on list view.
+ Updated file templates/list_view.tpl

Version 1.4.3
------------------------------------------------------------------
8 March 2007
+ Changed sticky mechanism from saving via the object method. Switched
  to cleaner db method.

7 March 2007
+  Removed fake French translation.

6 March 2007
+ Added ability for blog entries to expire.
+ Added ability to sticky a blog entry.

5 March 2007