@@ -10,6 +10,9 @@ entry TEXT NOT NULL,
 author_id INT NOT NULL default 0,
 author varchar(50) NOT NULL,
 create_date INT NOT NULL default 0,
+updater_id INT NOT NULL default 0,
+updater varchar(50) NOT NULL,
+update_date INT NOT NULL default 0,
 publish_date INT NOT NULL default 0,
 expire_date int not null default 0,
 allow_comments SMALLINT NOT NULL default 0,
